# pyproject-rbac

version_1/: .env  pyproject.toml  requirements.txt
version_1/alembic/: env.py
version_1/alembic/versions/: 2ea616819bf5_pk_uuid_default.py  32d572a171c9_roles_table_creation.py  7a715cc13b00_policies_table_creation.py  e4bef172671e_permissions_table_creation.py
version_1/app/core/: config.py
version_1/app/db/: session.py
version_1/app/models/: __init__.py  permissions.py  policies.py  roles.py
version_1/seeds/: __init__.py  __main__.py  constants.py  seeder.py
version_1/seeds/core/: seeder.py  session.py
version_1/seeds/data/: 1_policies.json  2_roles.json  3_permissions.json
version_1/seeds/preparers/: __init__.py  base.py  permission.py  policy.py  role.py
version_1/seeds/utils/: loader.py  logger.py
